<resources>
    <string name="app_name">FTCTestTask</string>
    <string name="enter_the_first_digits_of_a_card_number_bin_iin">Enter the first digits of a card number (BIN/IIN)</string>
    <string name="go">Go</string>
    <string name="scheme_network">SCHEME / NETWORK</string>
    <string name="type">TYPE</string>
    <string name="prepaid">PREPAID</string>
    <string name="brand">BRAND</string>
    <string name="bank">BANK</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="length">LENGTH</string>
    <string name="luhn">LUHN</string>
    <string name="country">COUNTRY</string>
</resources>